[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "3.0.0-beta.15"
actix-web = "4.0.0-beta.14"
config = "0.11.0"
serde = { version = "1.0.132", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] } 
chrono = "0.4.15"

[dev-dependencies]
actix-rt = "2.5.0"
reqwest = "0.11"
tokio = "1"

# Using table-like toml syntax to avoid a super-long line! 
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [ 
  "runtime-actix-rustls", 
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]
